# 24stanki

./: .gitignore  CNAME  EXECUTION-PLAN-DETAILED.md  README.md  SEO-PLAN-24STANKI.md  add_breadcrumbs_to_all.py  add_scripts.py  blog-kapitalnyi-remont-pressa.html  blog-obsluzhivanie-listogibov.html  blog-remont-cpu-stoiki.html  blog-remont-gilotin.html  blog-remont-lentochnyh-pil.html  blog-remont-listogiba.html  blog-remont-listogibov-chpu.html  blog-remont-profilgebiv.html  blog-remont-trubogibov.html  blog-remont-valtsev.html  blog-script.js  blog-zapchasti-listogibov.html  blog.html  breadcrumb.js  index.html  kakoj-stanok-vybrat-dlya-proizvodstva.html  preview.html  price-list.xml  remont-gilotin-ekaterinburg.html  remont-gilotin-moskva.html  remont-gilotin-novosibirsk.html  remont-gilotin-spb.html  remont-gilotin.html  remont-lentochnyh-pil.html  remont-listogibov-ekaterinburg.html  remont-listogibov-moskva.html  remont-listogibov-novosibirsk.html  remont-listogibov-spb.html  remont-listogibov.html  remont-profilgebiv.html  remont-stankov-chpu.html  remont-trubogibov-ekaterinburg.html  remont-trubogibov-moskva.html  (+17 more)
output/reports/: duplicate_descs.csv  duplicate_titles.csv  meta_analysis.csv
seo-tools/: pyproject.toml
seo-tools/output/: final_analysis.txt
seo-tools/output/reports/: broken_links.csv  duplicate_descs.csv  meta_analysis.csv
seo-tools/src/: add_breadcrumbs.py  add_seo_tags.py  geo_pages_generator.py  link_checker.py  meta_analyzer.py
