[project]
name = "seo-tools-24stanki"
version = "0.1.0"
description = "SEO optimization tools for 24stanki.ru"
requires-python = ">=3.9"

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"